--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">-->
+    <link rel="stylesheet" href="css/style.css">
     <title>Momentum</title>
 </head>
 <body>
+<time id="time"></time>
+<h1>
+    <span id="greeting">Good Moment</span>
+    <p contenteditable="true" id="name"></p>
+</h1>
 
+<h2>
+    <span>What is your focus today?</span>
+    <p contenteditable="true" onfocus="this.innerHTML=''" id="focus"></p>
+</h2>
+
+<h2 id="date"></h2>
+
+<script src="./js/momentum.js"></script>
 </body>
 </html>
