--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Momentum</title>
 </head>
@@ -22,7 +22,20 @@
 </h2>
 
 <h2 id="date"></h2>
+<div class="buttons">
+    <div class="bg-button">Prev BG</div>
+    <div class="bg-button">Next BG</div>
+</div>
+
+<input type="text" class="city">
+<div class="output">
+    <div class="deg"></div>
+    <div class="icon">
+        <img src="" alt="">
+    </div>
+</div>
 
 <script src="./js/momentum.js"></script>
+<script src="./js/weather.js"></script>
 </body>
 </html>
