feat: add refresh weather for city from local storage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 
     <div class="weather">
+        <div class="weather__refresh-icon refresh-icon hide">
+            <img src="./assets/weather/refresh.png" alt="refresh weather">
+        </div>
         <div class="city" data-name="city" contenteditable>Введите город</div>
         <div class="icon owf"></div>
         <div class="degrees"></div>
