feat: add wind speed and humidity in weather-forecast

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="city" data-name="city" contenteditable>Введите город</div>
         <div class="icon owf"></div>
         <div class="degrees"></div>
+        <div class="description"></div>
         <div class="humidity"></div>
+        <div class="wind"></div>
     </div>
 
 </div>
