feat: implement smooth bg change

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </h2>
 
     <div class="buttons">
-        <a class="bg-button"><<</a>
-        <a class="bg-button">>></a>
+        <a class="bg-button"><</a>
+        <a class="bg-button">></a>
     </div>
 
     <div class="quote">
